--- a/resources/config.json
+++ b/resources/config.json
@@ -7,10 +7,11 @@
 
   "num_data": 8000,
   "img_size": 128,
-  "num_epochs": 100,
+  "num_epochs": 150,
   "batch_size": 32,
   "lr": 1e-4,
   "lr_warmup_steps": 500,
+  "checkpoints_step": 5,
 
   "pipeline_id": "DDPM"
 }
