--- a/resources/config.json
+++ b/resources/config.json
@@ -5,8 +5,9 @@
   "pipeline_id": "ddpm",
   "model_id": "unet",
 
-  "num_classes": 10,
   "num_channels": 1,
+  "block_out_channels": [64, 64, 128, 128],
+  "num_classes": 10,
 
   "num_data": 5000,
   "img_size": 32,
